2025-10-26 Massimo Manghi <mxmanghi@apache.org>
	* rivet/packages/dio/dio_Tdbc.tcl: version number updated to 1.2.5

2025-10-24 Massimo Manghi <mxmanghi@apache.org>
	* doc/rivet.xml.in: reformat and align entities definitions
	* doc/xml/commands.xml: changed 'inspect' command definition in reference list
	* rivet/packages/dio/dio_Tdbc.tcl: fix wrong serial number management

2025-10-23 Massimo Manghi <mxmanghi@apache.org>
	* rivet/packages/dio/formatters.tcl: a typo slipped in and spoiled
	for formatter class name for Posgresql connectors
	* rivet/packages/dio/dio_Tdbc.tcl: missing increment of a connector
	serial number
	* VERSION: Bumped version to 3.2.8

2025-10-16 Massimo Manghi <mxmanghi@apache.org>
	* rivet/packages/dio/dio_Tdbc.tcl: tdbc methods consolidation
	into tdbc_exec, method 'fetch' reimplemented to allow
	TDBC argument substitution

2025-10-15 Massimo Manghi <mxmanghi@apache.org>
	* rivet/packages/dio/dio_Tdbc.tcl: reimplementing methods
	update, delete and insert to enable DIO Tdbc driver to handle also
	SQL queries using the TDBC named argument substitution
	* rivet/packages/dio/dio.tcl: better handling of the special field
	formatter. The special fields formatter usage disables on specific
	tables the SQL queries with named arguments substitution
 
2025-10-07 Massimo Manghi <mxmanghi@apache.org>
	* rivet/packages/dio/dio_Tdbc.tcl: removing method insert from
	class ::DIO::Tdbc, the real responsible of honoring SQL statements
	with bound variables was method exec

2025-10-06 Massimo Manghi <mxmanghi@apache.org>
	* rivet/packages/dio/dio_Tdbc.tcl: Reimplementing also method
	insert as named parameters requires an SQL statement to be
	evaluated where the array of key-value pairs lives.

2025-10-06 Massimo Manghi <mxmanghi@apache.org>
	* VERSION: Preparing RC as 3.2.7 (which was correctly set on 2024-11-26)

2025-10-05 Massimo Manghi <mxmanghi@apache.org>
	* rivet/packages/dio/[dio|dio_Tdbc.tcl|formatters.c]: fix missing argument